src/test/ui/traits/bound/on-structs-and-enums-in-impls.stderr
error[E0277]: the trait bound `u16: Trait` is not satisfied
  --> $DIR/on-structs-and-enums-in-impls.rs:20:6
   |
LL | struct Foo<T:Trait> {
   |              ----- required by this bound in `Foo`
...
LL | impl PolyTrait<Foo<u16>> for Struct {
   |      ^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `u16`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
